adicionando troca de cores apenas aos elementos do sobre mim e próximos passos serão dos elementos de projetos e icones de ferramentas

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <p class="fa fa-globe fa-lg"></p>
                 </a>
             </span>
-            <span id="menuIcon" title="Ver menu"> 
-                <a href="#" class="link-text navegacao__item--menu">
+            <span title="Ver menu"> 
+                <a href="#" class="link-text navegacao__item--menu" id="menuIcon">
                     <p class="fa fa-bars fa-lg"></p>
                 </a>
             </span>
@@ -42,7 +42,7 @@
                 <a class="link-text" href="https://www.linkedin.com/in/fabiodasilvaramalho/" target="_blank">
                     <img id="foto-perfil" src="https://media.licdn.com/dms/image/D4D03AQHv1psCsqrJeQ/profile-displayphoto-shrink_200_200/0/1697245450846?e=2147483647&v=beta&t=fpA9hbVnMYFwm5yF6X0LxomjxdMaa8w-dC1mN9x6cdk" alt="foto">
                 </a>
-                <p>Olá, me chamo Fábio, tenho 19 anos e gosto muito de resolver problemas de tecnologia. Estou cursando análise e desen...<button id="verMaisBtn">Ver mais</button></p>
+                <p id="sobre__texto">Olá, me chamo Fábio, tenho 19 anos e gosto muito de resolver problemas de tecnologia. Estou cursando análise e desen...<button id="verMaisBtn">Ver mais</button></p>
             </div>
         </section>
         <section id="projetos" >
