quase finalizando a estilização do light mode

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
             <div class="closeBtn">
                 <p class="fa fa-times fa-lg"></p>
             </div>
-            <span>
+            <span id="idiomaPtBr">
                 <img src="https://s1.static.brasilescola.uol.com.br/be/conteudo/images/2-bandeira-do-brasil.jpg" alt="Bandeira do Brasil indicando um idioma disponível para o conteúdo da página">
                 <p class="cardsSobTela__desc"> Português do Brasil</p>
             </span>
-            <span>
+            <span id="idiomaEnUs">
                 <img src="https://static.mundoeducacao.uol.com.br/mundoeducacao/2022/05/bandeira-estados-unidos.jpg" alt="Bandeira dos Estados Unidos indicando um idioma disponível para o conteúdo da página">
                 <p class="cardsSobTela__desc"> English of USA </p>
             </span>
@@ -131,22 +131,22 @@
             <div class="closeBtn">
                 <p class="fa fa-times fa-lg"></p>
             </div>
-            <a href="#sobre" onclick="escondeMenuNav()">
+            <a class="links__nav" href="#sobre" onclick="escondeMenuNav()">
                 <span>
                     <p class="cardsSobTela__desc">Sobre mim</p>
                 </span>
             </a>
-            <a href="#projetos" onclick="escondeMenuNav()">
+            <a class="links__nav" href="#projetos" onclick="escondeMenuNav()">
                 <span>
                     <p class="cardsSobTela__desc">Projetos</p>
                 </span>
             </a>
-            <a href="#ferramentas" onclick="escondeMenuNav()">
+            <a class="links__nav" href="#ferramentas" onclick="escondeMenuNav()">
                 <span>
                     <p class="cardsSobTela__desc">Ferramentas</p>
                 </span>
             </a>
-            <a href="#contatos" onclick="escondeMenuNav()">
+            <a class="links__nav" href="#contatos" onclick="escondeMenuNav()">
                 <span>
                     <p class="cardsSobTela__desc">Contatos</p>
                 </span>
@@ -190,11 +190,11 @@
             })
         </script>
         </div>
-        <div id="cardProjetoUm" class="cardsSobTela" style="height: 52%;">
+        <div id="cardProjetoUm" class="cardsSobTela" style="height: 48%;">
         </div>
-        <div id="cardProjetoDois" class="cardsSobTela" style="height: 55%;">
+        <div id="cardProjetoDois" class="cardsSobTela" style="height: 50%;">
         </div>
-        <div id="cardProjetoTres" class="cardsSobTela" style="height: 47%;">
+        <div id="cardProjetoTres" class="cardsSobTela" style="height: 44%;">
         </div>
     </div>
     <footer id="contatos">
