ajustes na barra nav do projeto, responsividade 1/2 pronta com a adição do menu intuitivo. Próximos passos a correr é ajustar a responsividade de todo o projeto.

--- a/index.html
+++ b/index.html
@@ -20,22 +20,43 @@
     <div id="escureceTela"></div>
     <div id="suBody" >
         <nav id="navegacao">
-            <span id="languageIcon" title="Mudar idioma">
-                <a href="#" class="link-text navegacao__item">
-                    <p class="fa fa-globe fa-lg"></p>
-                </a>
-            </span>
-            <span title="Ver menu"> 
-                <a href="#" class="link-text navegacao__item--menu" id="menuIcon">
-                    <p class="fa fa-bars fa-lg"></p>
-                </a>
-            </span>
-            <span id="sunMode" title="Ativar modo claro">
-                <a href="#" class="link-text navegacao__item">
-                    <p class="fa fa-sun-o fa-lg"></p>
-                </a>
-            </span>
+            <div id="navDesktop">
+                <div id="navDesktop__opcs">
+                    <a class="navDesktop__opcs--item" href="#sobre">Sobre mim</a>
+                    <a class="navDesktop__opcs--item" href="#projetos">Projetos</a>
+                    <a class="navDesktop__opcs--item" href="#ferramentas">Ferramentas</a>
+                    <a class="navDesktop__opcs--item" href="#footer">Contato</a>
+                </div>
+                <div class="languageIcon" title="Mudar idioma">
+                    <span class="link-text navegacao__item">
+                        <p class="fa fa-globe fa-lg"></p>
+                    </span>
+                </div>
+                <div class="sunMode" title="Ativar modo claro">
+                    <span class="link-text navegacao__item">
+                        <p class="fa fa-sun-o fa-lg"></p>
+                    </span>
+                </div>
+            </div>
+            <div id="navMobile">
+                <span class="languageIcon" title="Mudar idioma">
+                    <a href="#" class="link-text navegacao__item">
+                        <p class="fa fa-globe fa-lg"></p>
+                    </a>
+                </span>
+                <span title="Ver menu" id="menuIcon"> 
+                    <a href="#" class="link-text navegacao__item--menu">
+                        <p class="fa fa-bars fa-lg"></p>
+                    </a>
+                </span>
+                <span class="sunMode" title="Ativar modo claro">
+                    <a href="#" class="link-text navegacao__item">
+                        <p class="fa fa-sun-o fa-lg"></p>
+                    </a>
+                </span>
+            </div>
         </nav>
+
         <section id="sobre">
             <h1 class="titulo"> Sobre mim </h1>
             <div class="bloco">
