major add responsive layout and some features // next to updateit is the footer icons, project layout and the background too, for more responsive features

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/suBody/principal.css">
     <link rel="stylesheet" href="css/suBody/nav.css">
@@ -22,7 +23,7 @@
         <nav id="navegacao">
             <div id="navDesktop">
                 <div id="navDesktop__opcs">
-                    <a class="navDesktop__opcs--item" href="#sobre">Sobre mim</a>
+                    <span class="navDesktop__opcs--item" href="#sobre" id="sobreBtn">Sobre mim</span>
                     <a class="navDesktop__opcs--item" href="#projetos">Projetos</a>
                     <a class="navDesktop__opcs--item" href="#ferramentas">Ferramentas</a>
                     <a class="navDesktop__opcs--item" href="#footer">Contato</a>
@@ -62,7 +63,7 @@
                 <a class="link-text" href="https://www.linkedin.com/in/fabiodasilvaramalho/" target="_blank">
                     <img id="foto-perfil" src="https://media.licdn.com/dms/image/D4D03AQHv1psCsqrJeQ/profile-displayphoto-shrink_200_200/0/1697245450846?e=2147483647&v=beta&t=fpA9hbVnMYFwm5yF6X0LxomjxdMaa8w-dC1mN9x6cdk" alt="foto">
                 </a>
-                <p id="sobre__texto">Olá, me chamo Fábio, tenho 19 anos e gosto muito de resolver problemas de tecnologia. Estou cursando análise e desen...<button id="verMaisBtn">Ver mais</button></p>
+                <p id="sobre__texto">Olá, me chamo Fábio, tenho 20 anos e gosto muito de resolver problemas de tecnologia. Estou cursando análise e desen...<button id="verMaisBtn">Ver mais</button></p>
             </div>
         </section>
         <section id="projetos" >
@@ -227,6 +228,7 @@
             <a class="link-text" href="https://github.com/fabioDev21/" target="_blank">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="logo do github">
                 <p>Github</p>
+                <!-- TODO: Adicionar devicons através de classe -->
             </a>
         </span>
     </footer>
