projetos estágio inicial

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="shortcut icon" href="assets/square-pen-solid.svg" type="image/x-icon">
     <script src="js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/b5d27f2592.js" crossorigin="anonymous"></script>
-    <title>Portfolio Fabio da Silva</title>
+    <title>Home</title>
 </head>
 <body>
     <nav id="navDesktop">
         <div class="navDesktop__opcs">
-            <a class="navDesktop__opcs--item ativo" href="#projetos">Home</a>
-            <a class="navDesktop__opcs--item" href="#projetos">Projetos</a>
+            <a class="navDesktop__opcs--item ativo" href="#">Home</a>
+            <a class="navDesktop__opcs--item" href="projetos.html">Projetos</a>
             <a class="navDesktop__opcs--item" href="#contatos">Contato</a>
         </div>
         <div class="sunMode" title="Ativar modo claro">
