alteração lógica de nome de pastas + estágio estabilizado da página de projetos + margem para adicionar os dialogs funcionais de cada projeto e informações extras de cada um.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/suBody/container.css">
-    <link rel="stylesheet" href="css/suBody/sobre-mim.css">
-    <link rel="stylesheet" href="css/suBody/projetos.css">
+    <link rel="stylesheet" href="css/index/container.css">
+    <link rel="stylesheet" href="css/index/sobre-mim.css">
+    <link rel="stylesheet" href="css/index/projetos.css">
     <link rel="shortcut icon" href="assets/square-pen-solid.svg" type="image/x-icon">
     <script src="js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/b5d27f2592.js" crossorigin="anonymous"></script>
@@ -77,7 +77,7 @@
                     <a href=""><button class="projetos__item--btn">Saiba mais!</button></a>
                 </div>
             </div>
-            <a href=""><button class="projetos__item--btn verMais"> Ver mais... </button></a>
+            <a href="projetos.html"><button class="projetos__item--btn verMais"> Ver mais... </button></a>
         </section>
         <footer id="contatos">
             <h4 id="footer__titulo">Entre em contato</h4>
