patch para arrumar a  media querie e trocado a foto de perfil não funcional

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="sobre">
             <div class="sobre__desc">
                 <a class="link-text" href="https://www.linkedin.com/in/fabiodasilvaramalho/" target="_blank">
-                    <img id="foto-perfil" src="https://media.licdn.com/dms/image/D4D03AQHv1psCsqrJeQ/profile-displayphoto-shrink_200_200/0/1697245450846?e=2147483647&v=beta&t=fpA9hbVnMYFwm5yF6X0LxomjxdMaa8w-dC1mN9x6cdk" alt="foto">
+                    <img id="foto-perfil" src="assets/foto-perfil.jpeg" alt="foto">
                 </a>
                 <div>
                     <h3>👋 Olá, me chamo Fábio</h3>
