fix do media querie em iphoneXR e add menu modal na primeira pagina

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         <span class="menuIcon"> 
             <p class="fa fa-bars fa-lg"></p>
         </span>
+        <dialog id="menuSelect">
+            <div class="itensModal">
+                <a href="projetos.html"><button>Projetos</button></a>
+                <a href="#contatos"><button>Contato</button></a>
+            </div>
+            <p id="closeBtn"><i class="fas fa-window-close"></i></p>
+        </dialog>
         <span class="sunMode">
             <p class="fa fa-sun-o fa-lg"></p>
         </span>
